// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should display content with default classnames 1`] = `
<div>
  <p
    class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with bold enabled 1`] = `
<div>
  <p
    class="font-bold text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with italic enabled 1`] = `
<div>
  <p
    class="font-regular italic text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size lg 1`] = `
<div>
  <p
    class="font-regular text-typography-default text-body-lg leading-body-lg space-y-paragraphSpacing-body-lg"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size md 1`] = `
<div>
  <p
    class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size sm 1`] = `
<div>
  <p
    class="font-regular text-typography-default text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size xl 1`] = `
<div>
  <p
    class="font-regular text-typography-default text-body-xl leading-body-xl space-y-paragraphSpacing-body-xl"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size xl and type underline 1`] = `
<div>
  <p
    class="font-regular underline text-typography-default text-body-xl leading-body-xl space-y-paragraphSpacing-body-xl"
  >
    Text content
  </p>
</div>
`;
